🐛 ⬆️ fix horizontal scroll issue, update gulp-hash

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,8 +18,6 @@ html {
 
 body {
   line-height: $baseline;
-  padding-left: $baseline;
-  padding-right: $baseline;
 }
 
 p {
