--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -1,7 +1,8 @@
 .c-navigation {
 	display: flex;
 	align-items: center;
-	padding: $baseline 0;
+	padding-top: $baseline;
+	padding-bottom: $baseline;
 
 	&__menu {
 		list-style: none;
@@ -29,8 +30,7 @@
 }
 
 .c-frontpage {
-	width: 100vw;
-	margin-left: -$baseline;
+	width: 100%;
 
 	&__header {
 		font-family: 'Affogato-Regular', sans-serif;
@@ -64,7 +64,8 @@
 }
 
 .c-footer {
-  padding: $baseline 0;
+  padding-top: $baseline;
+  padding-bottom: $baseline;
   text-align: center;
 	color: $smoke;
 
